test/must_fail/tran_bad_balue2.ngjs
#!/usr/bin/env ngspicejs
// Bad interval value
// linter: ngspicejs-lint
"use strict";

tran().interval('30m').interval('banana');